--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ Licensed under the MIT License (MIT). See LICENSE in the GitHub repository for l
 	<link href="css/style.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet"> 
 </head>
-<body>
+<body style="overflow: none">
 	<section class="grey-section container-fluid shadow-lg no-padding" style="overflow: none">
 		<canvas style="position: absolute; width: 100%" id="snowcanvas" width="1000" height="1000">
 		</canvas>
