--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ Licensed under the MIT License (MIT). See LICENSE in the GitHub repository for l
 					<p class="no-padding rob mg-sm" style="font-size: 1.2em;">I am a University Student in the UK. To different people I am known as a ...<br>
 					Software Engineer / Entrepreneur / Mathematician / Cryptographer / Blogger / Tutor / Inventor / Unity Asset Store Publisher / inactive YouTuber / Huge .NET fan</p>
 					<br>
-					<p class="no-padding rob mg-sm" style="font-size: 1.2em;">I've worked at one of the 'big four' tech companies; with cyber security research groups; and with several startups. I've taught undergrads and lead small teams. To put it simply: by day I'm an academic; by night I'm an programmer.</p>
+					<p class="no-padding rob mg-sm" style="font-size: 1.2em;">I've worked at one of the 'big four' tech companies; with cyber security research groups; and with several startups. I've taught undergrads and lead small teams. To put it simply: by day I'm an academic; by night I'm a programmer.</p>
 					<br>
 					<p class="no-padding rob mg-sm" style="font-size: 1.2em;">I occassionaly post more academic content on <a style="color: #00AED9" href="https://blog.jam-es.com">my blog</a>, but most of my online presence is programming related. I'm open to freelance work and I'm happy to chat to anyone with overlapping interests. Feel free to <a href="#contact" style="color: #00AED9">send me a message</a>.</p>
 				</div>
