--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@ Licensed under the MIT License (MIT). See LICENSE in the GitHub repository for l
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="description" content="The home of a variety of interesting projects.">
+	<meta content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" name="viewport">
 	<title>Jam-Es.com</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 	<link href="css/fluent-kit.min.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet"> 
 </head>
-<body style="overflow: none">
+<body style="overflow-x: hidden">
 	<section class="grey-section container-fluid shadow-lg no-padding" style="overflow: none">
 		<canvas style="position: absolute; width: 100%" id="snowcanvas" width="1000" height="1000">
 		</canvas>
