--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ Licensed under the MIT License (MIT). See LICENSE in the GitHub repository for l
 			</div>
 		</div>
 	</section>
-	<section id="hyperpost" style="background-color: black; padding: 0">
+	<section id="hyperpost" style="background-color: black; padding-left: 0; padding-right: 0;">
 		<div class="container fill">
 			<div class="row">
 				<div class="col-md-12">
@@ -94,7 +94,7 @@ Licensed under the MIT License (MIT). See LICENSE in the GitHub repository for l
 			</div>
 			<div class="row">
 				<div class="col text-center white">
-					<img src="img/hyperpost-icon.svg" style="display:inline-block; width: 100px; margin-top: 3em"/><h1 style="padding-top: 0"><strong>HyperPost</strong></h1>
+					<img src="img/hyperpost-icon.svg" style="display:inline-block; width: 100px;"/><h1 style="padding-top: 0"><strong>HyperPost</strong></h1>
 					<p class="sub-h2">A brand new native HTTP Client for Windows.</p>
 					<br>
 					<p style="font-size: 1.2em; font-weight: 400">Much better performance than Postman, with almost all the same features. Coming soon to the Windows Store.<br>Stay updated through <a style="color: #009AB6" href="https://blog.jam-es.com">my blog</a>.</p>
