--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ Licensed under the MIT License (MIT). See LICENSE in the GitHub repository for l
 	<link href="css/style.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
 	<link rel="shortcut icon" href="img/favicon.png">
+    <script data-ad-client="ca-pub-3608591913541781" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body style="overflow-x: hidden">
 	<section class="grey-section container-fluid shadow-lg no-padding" style="overflow: none">
