Added Start Menu Manager

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ Licensed under the MIT License (MIT). See LICENSE in the GitHub repository for l
 			<div class="row">
 				<div class="col-md-12 black" style="padding: 4% 4% 0% 4%; box-shadow: 0px 0px 68px #222222; background-color: white">
 					<h1 class="no-padding rob" style="padding-bottom: 2%">Bio</h1>
-					<p class="no-padding rob mg-sm" style="font-size: 1.2em;">I am a University Student in the UK. To different people I am known as a ...<br>
+					<p class="no-padding rob mg-sm" style="font-size: 1.2em;">I am a PhD Student in the UK. To different people I am known as a ...<br>
 					Software Engineer / Entrepreneur / Mathematician / Cryptographer / Blogger / Tutor / Inventor / Unity Asset Store Publisher / inactive YouTuber / Huge .NET fan</p>
 					<br>
 					<p class="no-padding rob mg-sm" style="font-size: 1.2em;">I've worked at one of the 'big four' tech companies; with cyber security research groups; and with several startups. I've taught undergrads and lead small teams. To put it simply: by day I'm an academic; by night I'm a programmer.</p>
@@ -80,8 +80,45 @@ Licensed under the MIT License (MIT). See LICENSE in the GitHub repository for l
 			</div>
 			<div style="height: 50px;">
 				<div class="col-md-12 center-text flexBox">
-					<a href="#hyperpost" class="chevron">
+					<a href="#startmenumanager" class="chevron">
 						<i class="mi mi-ChevronDown chevron shake-vertical black"></i>
+					</a>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section id="startmenumanager" style="background-color: rgb(0, 44, 63); padding-left: 0; padding-right: 0;">
+		<div class="container fill">
+			<div class="row">
+				<div class="col-md-12">
+				</div>
+			</div>
+			<div class="row">
+				<div class="col text-center white">
+					<img src="img/ssm-icon.svg" style="display:inline-block; width: 100px;"/><h1 style="padding-top: 0"><strong>Start Menu Manager</strong></h1>
+					<p class="sub-h2">Free and Open-Source Windows 10 app for managing shortcuts.</p>
+					<br>
+					<iframe style="display: block; margin-left: auto; margin-right: auto;" width="560" height="315" src="https://www.youtube.com/embed/22APfw-ZSxI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<ul style="margin-top: 30px;">
+						<li>Create shorcuts for websites, files, folders, software, commands and group shortcuts.</li>
+						<li>Prioritize shortcuts in Windows 10 Search.</li>
+						<li>Pick your own icons from websites or provide your own.</li>
+						<li>Pin them to Start Menu, Taskbar, and more.</li>
+					</ul>
+					<div style="margin-top: 30px;">
+						<button class="btn btn-primary btn-lg btn-rounded cta" style="min-width: 220px; margin: 3px 10px 3px 10px;" onclick="location.href='https://start-menu-manager.jam-es.com'">
+							Go To Website<i class="mi mi-ChevronRight"></i>
+						</button>
+						<button class="btn btn-primary btn-lg btn-rounded cta" style="min-width: 220px; margin: 3px 10px 3px 10px;" onclick="location.href='https://github.com/James231/Start-Menu-Manager'">
+							Download on GitHub<i class="mi mi-ChevronRight"></i>
+						</button>
+					</div>
+				</div>
+			</div>
+			<div style="height: 50px;">
+				<div class="col-md-12 center-text flexBox">
+					<a href="#hyperpost" class="chevron">
+						<i class="mi mi-ChevronDown chevron shake-vertical"></i>
 					</a>
 				</div>
 			</div>
@@ -248,7 +285,7 @@ Licensed under the MIT License (MIT). See LICENSE in the GitHub repository for l
 				<div class="col-md-12">
 				</div>
 			</div>
-			<h1 class="black text-center" style="font-weight: 400">Projects on GitHub</h1>
+			<h1 class="black text-center" style="font-weight: 400">Other Projects on GitHub</h1>
 			<div style="flex-grow: 1"></div>
 			<div class="row" style="flex-wrap: wrap;">
 				<div class="col-sm-12 col-md-4" style="padding: 1%; box-shadow: 0px 0px 68px #fff; background-color: white;">
@@ -277,8 +314,7 @@ JavaScript-Snow-Effect</p>
 					<p class="black mg-sm" style="font-weight: 400; margin-top: 1em">All of my projects are released under MIT making them free to use for any purpose.<br><br></p>
 					<div class="row" style="justify-content: center;">
 					<button class="btn btn-outline-primary btn-lg btn-rounded cta mg-sm" onclick="location.href='https://github.com/James231'">See More</button>
-					</div>	
-										
+					</div>		
 				</div>
 			</div>
 			<div style="flex-grow: 1"></div>
