particle performance improvements; small content update

--- a/404.html
+++ b/404.html
@@ -35,8 +35,24 @@ Licensed under the MIT License (MIT). See LICENSE in the GitHub repository for l
 		</div>
 	</div>
 	<footer class="page-footer shadow-lg" style="background-color: #282828; color: #d2d2d2; position: absolute; bottom: 0; width: 100%; height: 54px;">
-		<div class="container-fluid" style="padding-top: 8px; padding-bottom: 4px;">
+		<div class="container" style="padding-top: 8px; padding-bottom: 4px; display: flex; flex-direction: row">
 			&copy; Copyright <script>document.write(new Date().getFullYear());</script>; Jam-Es.com
+			<div style="flex-grow: 1"></div>
+			<a target="_blank" href="https://blog.jam-es.com">
+				<img src="img/blogger.png" width="25" height="25" style="float:right; margin-right: 10px">
+			</a>
+			<a target="_blank" href="https://github.com/James231">
+				<img src="img/github.png" width="25" height="25" style="float:right; margin-right: 10px">
+			</a>
+			<a target="_blank" href="https://solutionstudios.jam-es.com">
+				<img src="img/unity.png" width="25" height="25" style="float:right; margin-right: 10px">
+			</a>
+			<a target="_blank" href="https://www.youtube.com/channel/UC_efyH4unjG3zYh85Zv4XHA">
+				<img src="img/youtube.png" width="25" height="25" style="float:right; margin-right: 10px">
+			</a>
+			<a target="_blank" href="https://discordapp.com/channels/@me/694233917661773864/">
+				<img src="img/discord.png" width="25" height="25" style="float:right; margin-right: 10px">
+			</a>
 		</div>
 	</footer>
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
