--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@ Licensed under the MIT License (MIT). See LICENSE in the GitHub repository for l
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<meta name="description" content="The home of a variety of interesting projects.">
-	<title>Jam-Es.com</title>
+	<meta name="description" content="Independent software developer. See my blog, open-source GitHub repositories, Unity assets, YouTube tutorials, or contact me.">
+	<title>Jam-Es.com | Software, Services, Freelance</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 	<link href="css/fluent-kit.min.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
@@ -30,7 +30,7 @@ Licensed under the MIT License (MIT). See LICENSE in the GitHub repository for l
 			</div>
 			<div class="row">
 				<div class="col-md-12">
-					<h1 class="center-text title">Jam-Es.com</h1>
+					<h1 class="center-text title">Hi, I'm James</h1>
 					<h2 class="center-text sub-h1">See a list of my projects below.</h2>
 					<h2 class="center-text sub-h4">or ... perhaps you are just looking for one of these links:</h2>
 				</div>
@@ -99,11 +99,11 @@ Licensed under the MIT License (MIT). See LICENSE in the GitHub repository for l
 					<p class="sub-h2">Free and Open-Source Windows 10 app for managing shortcuts.</p>
 					<br>
 					<iframe style="display: block; margin-left: auto; margin-right: auto;" width="560" height="315" src="https://www.youtube.com/embed/22APfw-ZSxI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-					<ul style="margin-top: 30px;">
-						<li>Create shorcuts for websites, files, folders, software, commands and group shortcuts.</li>
-						<li>Prioritize shortcuts in Windows 10 Search.</li>
-						<li>Pick your own icons from websites or provide your own.</li>
-						<li>Pin them to Start Menu, Taskbar, and more.</li>
+					<ul style="margin-top: 30px; list-style-type: none;">
+						<li>📁&nbsp;&nbsp;Create shorcuts for websites, files, folders, software, commands and group shortcuts.</li>
+						<li>🔍&nbsp;&nbsp;Prioritize shortcuts in Windows 10 Search.</li>
+						<li>🌎&nbsp;&nbsp;Pick your own icons from websites or provide your own.</li>
+						<li>🛠&nbsp;&nbsp;Pin them to Start Menu, Taskbar, and more.</li>
 					</ul>
 					<div style="margin-top: 30px;">
 						<button class="btn btn-primary btn-lg btn-rounded cta" style="min-width: 220px; margin: 3px 10px 3px 10px;" onclick="location.href='https://start-menu-manager.jam-es.com'">
@@ -369,8 +369,24 @@ JavaScript-Snow-Effect</p>
 		</div>
 	</section>
 	<div class="container-fluid shadow-lg" style="background-color: #282828; color: #d2d2d2;">
-		<div class="container" style="padding-top: 8px; padding-bottom: 4px;">
+		<div class="container" style="padding-top: 8px; padding-bottom: 4px; display: flex; flex-direction: row">
 			&copy; Copyright <script>document.write(new Date().getFullYear());</script>; Jam-Es.com
+			<div style="flex-grow: 1"></div>
+			<a target="_blank" href="https://blog.jam-es.com">
+				<img src="img/blogger.png" width="25" height="25" style="float:right; margin-right: 10px">
+			</a>
+			<a target="_blank" href="https://github.com/James231">
+				<img src="img/github.png" width="25" height="25" style="float:right; margin-right: 10px">
+			</a>
+			<a target="_blank" href="https://solutionstudios.jam-es.com">
+				<img src="img/unity.png" width="25" height="25" style="float:right; margin-right: 10px">
+			</a>
+			<a target="_blank" href="https://www.youtube.com/channel/UC_efyH4unjG3zYh85Zv4XHA">
+				<img src="img/youtube.png" width="25" height="25" style="float:right; margin-right: 10px">
+			</a>
+			<a target="_blank" href="https://discordapp.com/channels/@me/694233917661773864/">
+				<img src="img/discord.png" width="25" height="25" style="float:right; margin-right: 10px">
+			</a>
 		</div>
 	</div>
 	<script src="https://code.jquery.com/jquery-2.1.1.min.js" crossorigin="anonymous"></script>
